--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -62,6 +62,5 @@ body,html{
 }
 
 .modal-body {
-  overflow-y: auto !important;
-  -webkit-overflow-scrolling: auto !important;
+  -webkit-overflow-scrolling: touch !important;
 }
